@@ -13,13 +13,10 @@
 package org.openhab.automation.jrule.items;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.openhab.automation.jrule.internal.items.JRuleInternalColorGroupItem;
-import org.openhab.automation.jrule.items.metadata.JRuleItemMetadata;
 import org.openhab.automation.jrule.rules.value.JRuleHsbValue;
 
 /**
@@ -30,15 +27,13 @@ import org.openhab.automation.jrule.rules.value.JRuleHsbValue;
 class JRuleColorGroupItemTest extends JRuleColorItemTest {
     @Override
     protected JRuleItem getJRuleItem() {
-        return new JRuleInternalColorGroupItem(GROUP_NAME, "Label", "Type", "Id",
-                Map.of("Speech", new JRuleItemMetadata("SetLightState", Map.of("location", "Livingroom"))),
-                List.of("Lighting", "Inside"));
+        return new JRuleInternalColorGroupItem(GROUP_NAME, "Label", "Type", "Id", mock, List.of("Lighting", "Inside"));
     }
 
     @Test
     public void testMemberOfGeneric() {
         List<JRuleHsbValue> set = JRuleColorGroupItem.forName(GROUP_NAME).memberItems().stream()
-                .map(JRuleColorItem::getStateAsHsb).collect(Collectors.toList());
+                .map(JRuleColorItem::getStateAsHsb).toList();
         Assertions.assertEquals(3, set.size());
     }
 }
