@@ -13,13 +13,10 @@
 package org.openhab.automation.jrule.items;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.openhab.automation.jrule.internal.items.JRuleInternalStringGroupItem;
-import org.openhab.automation.jrule.items.metadata.JRuleItemMetadata;
 
 /**
  * The {@link JRuleStringGroupItemTest}
@@ -29,15 +26,13 @@ import org.openhab.automation.jrule.items.metadata.JRuleItemMetadata;
 class JRuleStringGroupItemTest extends JRuleStringItemTest {
     @Override
     protected JRuleItem getJRuleItem() {
-        return new JRuleInternalStringGroupItem(GROUP_NAME, "Label", "Type", "Id",
-                Map.of("Speech", new JRuleItemMetadata("SetLightState", Map.of("location", "Livingroom"))),
-                List.of("Lighting", "Inside"));
+        return new JRuleInternalStringGroupItem(GROUP_NAME, "Label", "Type", "Id", mock, List.of("Lighting", "Inside"));
     }
 
     @Test
     public void testMemberOfGeneric() {
         List<String> set = JRuleStringGroupItem.forName(GROUP_NAME).memberItems().stream()
-                .map(JRuleStringItem::getStateAsString).collect(Collectors.toList());
+                .map(JRuleStringItem::getStateAsString).toList();
         Assertions.assertEquals(3, set.size());
     }
 }
